# table-migrator

./: LICENSE  README.md  example.env  pyproject.toml  table_migrate.py
